--- a/src/app/mitav/department-percentages-dialog/department-percentages-dialog.component.scss
+++ b/src/app/mitav/department-percentages-dialog/department-percentages-dialog.component.scss
@@ -44,4 +44,30 @@
       font-size: 0.9rem;
     }
   }
+  .green-icon {
+    color: green;
+    margin-left: 8px;
+    font-size: 20px;
+  }
+  
+  .red-icon {
+    color: red;
+    margin-left: 8px;
+    font-size: 20px;
+  }
+  
+  .styled-table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  .styled-table th, .styled-table td {
+    padding: 10px;
+    text-align: center;
+  }
+  
+  .styled-table th {
+    background-color: #f5f5f5;
+    font-weight: bold;
+  }
   
