--- a/src/app/mitav/department-percentages-dialog/department-percentages-dialog.component.html
+++ b/src/app/mitav/department-percentages-dialog/department-percentages-dialog.component.html
@@ -7,13 +7,13 @@
       <td mat-cell *matCellDef="let element"> {{ element.unitName }} </td>
     </ng-container>
 
-    <!-- Mobility Percentage Column -->
+    <!-- Percentage Column -->
     <ng-container matColumnDef="percentage">
       <th mat-header-cell *matHeaderCellDef> % ניידות </th>
       <td mat-cell *matCellDef="let element">
         {{ element.percentage | number:'1.1-1' }}%
-        <mat-icon *ngIf="isAboveThreshold(element.percentage)" class="green-icon">check_circle</mat-icon>
-        <mat-icon *ngIf="!isAboveThreshold(element.percentage)" class="red-icon">cancel</mat-icon>
+        <mat-icon *ngIf="isAboveThreshold(element.percentage, 'percentage')" class="green-icon">check_circle</mat-icon>
+        <mat-icon *ngIf="!isAboveThreshold(element.percentage, 'percentage')" class="red-icon">cancel</mat-icon>
       </td>
     </ng-container>
 
@@ -22,8 +22,8 @@
       <th mat-header-cell *matHeaderCellDef> מרשם הליכה </th>
       <td mat-cell *matCellDef="let element">
         {{ element.formattedRecommendationData || 'N/A' }}
-        <mat-icon *ngIf="isAboveThreshold(element.formattedRecommendationData)" class="green-icon">check_circle</mat-icon>
-        <mat-icon *ngIf="!isAboveThreshold(element.formattedRecommendationData)" class="red-icon">cancel</mat-icon>
+        <mat-icon *ngIf="isAboveThreshold(element.formattedRecommendationData, 'default')" class="green-icon">check_circle</mat-icon>
+        <mat-icon *ngIf="!isAboveThreshold(element.formattedRecommendationData, 'default')" class="red-icon">cancel</mat-icon>
       </td>
     </ng-container>
 
@@ -32,24 +32,23 @@
       <th mat-header-cell *matHeaderCellDef> דרגת ניידות </th>
       <td mat-cell *matCellDef="let element">
         {{ element.formattedMobilityData || 'N/A' }}
-        <mat-icon *ngIf="isAboveThreshold(element.formattedMobilityData)" class="green-icon">check_circle</mat-icon>
-        <mat-icon *ngIf="!isAboveThreshold(element.formattedMobilityData)" class="red-icon">cancel</mat-icon>
+        <mat-icon *ngIf="isAboveThreshold(element.formattedMobilityData, 'default')" class="green-icon">check_circle</mat-icon>
+        <mat-icon *ngIf="!isAboveThreshold(element.formattedMobilityData, 'default')" class="red-icon">cancel</mat-icon>
       </td>
     </ng-container>
 
-    <!-- Functional State Column (מצב תפקודי) -->
+    <!-- Functional State Column -->
     <ng-container matColumnDef="functionalState">
       <th mat-header-cell *matHeaderCellDef> מצב תפקודי </th>
       <td mat-cell *matCellDef="let element">
         {{ element.functionalState || 'N/A' }}
-        <mat-icon *ngIf="isAboveThreshold(element.functionalState)" class="green-icon">check_circle</mat-icon>
-        <mat-icon *ngIf="!isAboveThreshold(element.functionalState)" class="red-icon">cancel</mat-icon>
+        <mat-icon *ngIf="isAboveThreshold(element.functionalState, 'default')" class="green-icon">check_circle</mat-icon>
+        <mat-icon *ngIf="!isAboveThreshold(element.functionalState, 'default')" class="red-icon">cancel</mat-icon>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="['unitName', 'percentage', 'formattedMobilityData', 'formattedRecommendationData', 'functionalState']"></tr>
     <tr mat-row *matRowDef="let row; columns: ['unitName', 'percentage', 'formattedMobilityData', 'formattedRecommendationData', 'functionalState'];"></tr>
-
   </table>
 </mat-dialog-content>
 
