--- a/src/app/mitav/department-percentages-dialog/department-percentages-dialog.component.html
+++ b/src/app/mitav/department-percentages-dialog/department-percentages-dialog.component.html
@@ -1,65 +1,55 @@
 <mat-dialog-content class="dialog-content">
   <table mat-table [dataSource]="departmentData" class="mat-elevation-z8 styled-table">
-    
     <!-- Department Name Column -->
     <ng-container matColumnDef="unitName">
       <th mat-header-cell *matHeaderCellDef> מחלקה </th>
       <td mat-cell *matCellDef="let element"> {{ element.unitName }} </td>
     </ng-container>
 
-    <!-- Percentage Column -->
-    <ng-container matColumnDef="percentage">
-      <th mat-header-cell *matHeaderCellDef> % ניידות </th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.percentage | number:'1.1-1' }}%
-        <mat-icon *ngIf="isAboveThreshold(element.percentage, 'percentage')" class="green-icon">check_circle</mat-icon>
-        <mat-icon *ngIf="!isAboveThreshold(element.percentage, 'percentage')" class="red-icon">cancel</mat-icon>
-      </td>
+
+<!-- Percentage Column -->
+<ng-container matColumnDef="percentage">
+  <th mat-header-cell *matHeaderCellDef> % ניידות </th>
+  <td mat-cell *matCellDef="let element; let isLast = last">
+    <!-- Total row logic -->
+    <ng-container *ngIf="isLast; else normalPercentage">
+      {{ totalMobilityPercentage | number: '1.2-2' }}%
     </ng-container>
+    <ng-template #normalPercentage>
+      {{ element.percentage | number: '1.2-2' }}%
+    </ng-template>
+  </td>
+</ng-container>
 
     <!-- RecommendationForWalking Column -->
     <ng-container matColumnDef="formattedRecommendationData">
       <th mat-header-cell *matHeaderCellDef> מרשם הליכה </th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.formattedRecommendationData || 'N/A' }}
-        <mat-icon *ngIf="isAboveThreshold(element.formattedRecommendationData, 'default')" class="green-icon">check_circle</mat-icon>
-        <mat-icon *ngIf="!isAboveThreshold(element.formattedRecommendationData, 'default')" class="red-icon">cancel</mat-icon>
-      </td>
+      <td mat-cell *matCellDef="let element"> {{ element.formattedRecommendationData || 'N/A' }} </td>
     </ng-container>
 
     <!-- Mobility Grade Column -->
     <ng-container matColumnDef="formattedMobilityData">
       <th mat-header-cell *matHeaderCellDef> דרגת ניידות </th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.formattedMobilityData || 'N/A' }}
-        <mat-icon *ngIf="isAboveThreshold(element.formattedMobilityData, 'default')" class="green-icon">check_circle</mat-icon>
-        <mat-icon *ngIf="!isAboveThreshold(element.formattedMobilityData, 'default')" class="red-icon">cancel</mat-icon>
-      </td>
+      <td mat-cell *matCellDef="let element"> {{ element.formattedMobilityData || 'N/A' }} </td>
     </ng-container>
 
     <!-- Functional State Column -->
     <ng-container matColumnDef="functionalState">
       <th mat-header-cell *matHeaderCellDef> מצב תפקודי </th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.functionalState || 'N/A' }}
-        <mat-icon *ngIf="isAboveThreshold(element.functionalState, 'default')" class="green-icon">check_circle</mat-icon>
-        <mat-icon *ngIf="!isAboveThreshold(element.functionalState, 'default')" class="red-icon">cancel</mat-icon>
-      </td>
+      <td mat-cell *matCellDef="let element"> {{ element.functionalState || 'N/A' }} </td>
     </ng-container>
-<!-- Consultation Status Column -->
-<!-- Consultation Status Column -->
-<ng-container matColumnDef="consultationStatus">
-  <th mat-header-cell *matHeaderCellDef> סטטוס התייעצות </th>
-  <td mat-cell *matCellDef="let element">
-    {{ element.consultationPercentage || 'N/A' }}
-    <mat-icon *ngIf="isAboveThreshold(element.consultationPercentage, 'default')" class="green-icon">check_circle</mat-icon>
-    <mat-icon *ngIf="!isAboveThreshold(element.consultationPercentage, 'default')" class="red-icon">cancel</mat-icon>
-  </td>
-</ng-container>
 
+    <!-- Consultation Status Column -->
+    <ng-container matColumnDef="consultationPercentage">
+      <th mat-header-cell *matHeaderCellDef> סטטוס התייעצות </th>
+      <td mat-cell *matCellDef="let element"> {{ element.consultationPercentage || 'N/A' }} </td>
+    </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['unitName', 'percentage', 'formattedMobilityData', 'formattedRecommendationData', 'functionalState','consultationStatus']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['unitName', 'percentage', 'formattedMobilityData', 'formattedRecommendationData', 'functionalState','consultationStatus'];"></tr>
+    <!-- Header Row -->
+    <tr mat-header-row *matHeaderRowDef="['unitName', 'percentage', 'formattedMobilityData', 'formattedRecommendationData', 'functionalState', 'consultationPercentage']"></tr>
+
+    <!-- Data Rows -->
+    <tr mat-row *matRowDef="let row; columns: ['unitName', 'percentage', 'formattedMobilityData', 'formattedRecommendationData', 'functionalState', 'consultationPercentage'];"></tr>
   </table>
 </mat-dialog-content>
 
