--- a/src/app/chameleon-reports/department-occupied-mitav/department-occupied-mitav.component.scss
+++ b/src/app/chameleon-reports/department-occupied-mitav/department-occupied-mitav.component.scss
@@ -297,4 +297,8 @@
     margin-bottom: 10px; /* Spacing below the title */
   }
   
- 
+  .red-text {
+    color: red;
+    font-weight: bold;
+  }
+  
