--- a/src/app/mitav/mitav-mobility/mitav-mobility.component.html
+++ b/src/app/mitav/mitav-mobility/mitav-mobility.component.html
@@ -22,6 +22,10 @@
     <div class="card-body">
       <div class="filter-container">
         <!-- Department Multi-Select -->
+        <mat-form-field appearance="outline">
+          <mat-label>Search</mat-label>
+          <input matInput (keyup)="applyGlobalFilter($event)" placeholder="Search across all columns">
+        </mat-form-field>
         <mat-form-field class="filter-field">
           <mat-label>בחר מחלקות</mat-label>
           <mat-select [(ngModel)]="selectedDepartments" multiple (selectionChange)="applyFilters()">
@@ -212,18 +216,18 @@
             <td mat-cell *matCellDef="let element"> {{ element.RecommendedWalkingDistance }}</td>
           </ng-container>
       
-          <!-- Morning Shift Count Column -->
+          <!-- Morning Shift Count Column
           <ng-container matColumnDef="MorningShiftCount">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר משמרות בוקר</th>
             <td mat-cell *matCellDef="let element"> {{ element.MorningShiftCount }}</td>
           </ng-container>
       
-          <!-- Night Shift Count Column -->
+         
           <ng-container matColumnDef="NightShiftCount">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר משמרות לילה</th>
             <td mat-cell *matCellDef="let element"> {{ element.NightShiftCount }}</td>
           </ng-container>
-      
+       -->
           <!-- Dates With Both Shifts Column -->
           <ng-container matColumnDef="DatesWithBothShifts">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>ימים עם שתי משמרות</th>
@@ -274,12 +278,24 @@
       </div>
     </mat-tab>
   
-    <!-- Additional Table Placeholder -->
-    <mat-tab label="Additional Table">
-      <div class="placeholder-content">
-        <p>Additional table content goes here.</p>
-      </div>
-    </mat-tab>
+   <!-- Delirium Report Tab -->
+  <mat-tab label="דלריום">
+    <div class="placeholder-content">
+      <h3>Mitav Delirium Report</h3>
+      <mat-table [dataSource]="deliriumDataSource" matSort class="mat-elevation-z8">
+        <ng-container *ngFor="let column of deliriumDisplayedColumns" [matColumnDef]="column">
+          <mat-header-cell *matHeaderCellDef> {{ column }} </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{ element[column] }} </mat-cell>
+        </ng-container>
+
+        <mat-header-row *matHeaderRowDef="deliriumDisplayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: deliriumDisplayedColumns;"></mat-row>
+      </mat-table>
+
+      <mat-paginator #paginatorDelirium [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
+    </div>
+  </mat-tab>
+
   </mat-tab-group>
   
 </div>
